--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     text-align: center;
     padding: 40px;
     ">
-    <img alt="刘亚炜" src="https://github.com/yaoruo/cangku/blob/main/%E5%9B%BE%E6%A0%87.jpg" width="80px" height="80px">
+    <img alt="刘亚炜" src="https://github.com/yaoruo/cangku/blob/main/tubiao.jpg" width="80px" height="80px">
   </div>
   <div style="
    max-width:760px;
